[tool.poetry]
name = "code-loader"
version = "0.2.52"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tensorleap/code-loader"
homepage = "https://github.com/tensorleap/code-loader"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
tensorflow = {version = "^2.11.0", markers = "platform_machine  == 'x86_64'"}
tensorflow-macos = {version = "^2.11.0", markers = "platform_machine  == 'arm64'"}
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
grappa = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-watch = "^4.2.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*the imp module.*:DeprecationWarning"]
