[tool.poetry]
name = "code-loader.helpers"
version = "1.0.11"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
readme = "README.md"
packages = [{include = "code_loader"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tensorflow-io-gcs-filesystem = "0.30.0"
tensorflow = {version = "2.11.0", markers = "platform_machine  == 'x86_64'"}
tensorflow-macos = {version = "2.11.0", markers = "platform_machine  == 'arm64'"}
torch = ">= 1.4.0, <= 2.1.0"
code-loader = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
grappa = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-watch = "^4.2.0"
mypy = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
