[tool.poetry]
name = "code-loader"
version = "1.0.49.dev9"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tensorleap/code-loader"
homepage = "https://github.com/tensorleap/code-loader"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.22.3"
psutil = "^5.9.5"
matplotlib = ">=3.3,<3.4"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
grappa = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-watch = "^4.2.0"
mypy = "1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*the imp module.*:DeprecationWarning"]
